Bug 375337 - Kdenlive/Win: loading a project originally created on Linux does not resolve luma wipe files
Summary: Kdenlive/Win: loading a project originally created on Linux does not resolve ...
Status: RESOLVED FIXED
Alias: None
Product: kdenlive
Classification: Applications
Component: Video Effects & Transitions (other bugs)
Version First Reported In: 16.12.0
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Vincent PINON
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-01-20 14:01 UTC by Wegwerf
Modified: 2017-09-05 17:16 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Luma files not found (40.45 KB, image/jpeg)
2017-01-29 16:14 UTC, Wegwerf
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Wegwerf 2017-01-20 14:01:44 UTC
When loading an existing Kdenlive project that uses the "Composite" transition in combination with a luma wipe, then Kdenlive/Windows complains that it cannot find the luma file.

This is always reproducible.

To trigger the bug:
1. Create Kdenlive project on Linux, add a dummy clip to the timeline, then a Composite transition to it. Set the luma wipe of this transition.
2. Save project.
3. Load project on Kdenlive/Windows. You'll now get the producers not found dialog stating that the luma file was not found.
Comment 1 Wegwerf 2017-01-29 16:12:56 UTC
See screenshot attached: producer location dialog does not locate luma files ... where are they anyway?
Comment 2 Wegwerf 2017-01-29 16:14:40 UTC
Created attachment 103697 [details]
Luma files not found
Comment 3 Vincent PINON 2017-08-21 21:50:29 UTC
Git commit db856a5cd3328fa3d51950ee305c86d2eacb3ef5 by Vincent Pinon.
Committed on 21/08/2017 at 20:20.
Pushed by vpinon into branch 'Applications/17.08'.

Windows: find Kdenlive lumas

M  +4    -0    src/doc/documentchecker.cpp

https://commits.kde.org/kdenlive/db856a5cd3328fa3d51950ee305c86d2eacb3ef5
Comment 4 Jean-Baptiste Mardelle 2017-09-05 17:16:43 UTC
Git commit 41047f80e5c4faec4afc2b25f53cdced35cf8b8b by Jean-Baptiste Mardelle, on behalf of Vincent Pinon.
Committed on 05/09/2017 at 17:07.
Pushed by mardelle into branch 'refactoring_timeline'.

Windows: find Kdenlive lumas

M  +4    -0    src/doc/documentchecker.cpp

https://commits.kde.org/kdenlive/41047f80e5c4faec4afc2b25f53cdced35cf8b8b