Windows: find Kdenlive lumas

BUG: 375337